--- a/JavaScript/.project
+++ b/JavaScript/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>webimc</name>
+	<name>IMCjs</name>
 	<comment></comment>
 	<projects>
 	</projects>
