--- a/JavaServer Pages/pom.xml
+++ b/JavaServer Pages/pom.xml
@@ -6,6 +6,7 @@
   <packaging>war</packaging>
   <build>
 		<finalName>website</finalName>
+	
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -26,4 +27,16 @@
         </plugin>
 		</plugins>
 </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.eclipse.jetty</groupId>
+  		<artifactId>apache-jsp</artifactId>
+  		<version>9.2.15.v20160210</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>gtjstl</groupId>
+  		<artifactId>jstl</artifactId>
+  		<version>1.2</version>
+  	</dependency>
+  </dependencies>
 </project>
