--- a/JavaServer Pages/pom.xml
+++ b/JavaServer Pages/pom.xml
@@ -38,5 +38,11 @@
   		<artifactId>jstl</artifactId>
   		<version>1.2</version>
   	</dependency>
-  </dependencies>
+    <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-web-api</artifactId>
+        <version>6.0</version>
+        <scope>provided</scope>
+    </dependency>
+</dependencies>
 </project>
