--- a/imcMVC/.project
+++ b/imcMVC/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>br.com.imc</name>
+	<name>imcMVC</name>
 	<comment></comment>
 	<projects>
 	</projects>
